finished the basics

--- a/tnn-css-animation/style.css
+++ b/tnn-css-animation/style.css
@@ -9,7 +9,15 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  width: 100%;
-  transform: rotateX(60deg);
+.hoverbro {
+  width: 100px;
+  background-color: lightcoral;
+  height: 100px;
+  cursor: pointer;
+  transition: background-color 1s, transform 2s 1s;
+}
+
+.hoverbro:hover {
+  background-color: blue;
+  transform: rotate(360deg);
 }
