--- a/anim-training/style.css
+++ b/anim-training/style.css
@@ -1,157 +1,155 @@
 * {
-  box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  font-family: sans-serif;
+  box-sizing: border-box;
+  font-family: vazir;
+}
+
+@font-face {
+  font-family: vazir;
+  src: url(font/vazir-font-v16.1.0/Vazir.ttf);
+}
+
+html {
+  height: 100%;
+  min-height: 100%;
+  background-color: yellow;
 }
 
 body {
-  height: 200vh;
-  /* background-image: linear-gradient(to bottom right, rgb(180, 173, 173), grey); */
+  min-height: 100%;
+  background-color: whitesmoke;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+.width-controller {
+  max-width: 1160px;
+  width: 100%;
 }
 
 .container {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  background-image: linear-gradient(to bottom, black, rgb(65, 64, 64));
-  color: white;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 
-.navbar {
-  max-width: 1160px;
-  align-items: center;
-  /* background-color: cornflowerblue; */
+.header {
+  background-color: pink;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: fixed;
-  width: 100%;
+  justify-content: center;
+  max-height: 100px;
   overflow: hidden;
-  transition: 0.6s;
-  flex-wrap: wrap;
+  transition: 0.7s linear;
+}
+.header-toggle-active {
+  max-height: 440px;
+}
+.header-content {
+  padding: 15px 20px;
+  background-color: tomato;
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  grid-template-areas:
+    "header-logo header-info header-burger"
+    "header-navbar header-navbar header-navbar"
+    "header-search header-search header-search";
+  gap: 10px;
 }
 
-.header-right-section {
+.header-logo {
+  grid-area: header-logo;
+  background-color: thistle;
+}
+.header-logo-img {
+  width: 60px;
+  width: 60px;
+}
+
+.header-info {
+  grid-area: header-info;
+  background-color: thistle;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-
-.logo {
-  width: 70px;
-  height: 70px;
-  /* background-color: orange; */
-
-  margin: 5px 20px 5px 0px;
-  transition: 0.3s;
-  opacity: 1;
-}
-
-.header-image {
-  width: 70px;
-  height: 70px;
-}
-.logo-disappear {
-  opacity: 0;
 }
 
 .header-title {
   font-size: 24px;
 }
 
-.header-meta {
-  margin: 5px 20px 5px 0px;
+.header-description {
+  font-size: 16px;
 }
 
-.list {
-  list-style-type: none;
+.header-burger {
+  grid-area: header-burger;
+  background-color: violet;
   display: flex;
-  flex-wrap: wrap;
-  /* background-color: purple; */
-  overflow: hidden;
-  transition: 0.4s linear;
-  align-self: stretch;
+  justify-content: flex-end;
+  align-items: stretch;
 }
 
-.item {
-  /* background-color: yellow; */
-  padding: 5px 12px;
-  cursor: pointer;
+.header-burger .burger {
+  height: 35px;
+  width: 40px;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  /* background-color: blue; */
+  justify-content: space-around;
+
+  transition: 0.6s;
+}
+
+.burger-toggle-active {
+  transform: rotateZ(-90deg);
+}
+
+.header-burger .burger .burger-line {
+  height: 5px;
+  width: 40px;
+  border-radius: 20px;
+  background-color: black;
+}
+
+.header-navbar {
+  background-color: burlywood;
+  grid-area: header-navbar;
+  list-style-type: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 16px;
+  gap: 10px;
 }
 
-.item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.header-search {
+  grid-area: header-search;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 7px;
+}
+.content {
+  background-color: blueviolet;
 }
 
-.bar {
-  width: 0px;
-  height: 3px;
-
-  background-color: transparent;
-  transition: 0.3s;
+.footer {
+  background-color: cadetblue;
 }
 
-.bar-mouseover {
-  background-color: gold;
-  width: 100%;
-}
-.navbar2 {
-  background-color: greenyellow;
-  height: 20px;
+.search-field {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 8px;
 }
 
-.list2 {
-  transform: translateX(100%);
-
-  opacity: 0;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-}
-
-.header-form {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: center;
-  /* background-color: red; */
-}
-
-.header-field {
+.search-submit {
+  padding: 10px;
+  font-size: 16px;
   border: none;
   border-radius: 8px;
-  width: 200px;
-  margin-right: 4px;
-  font-size: 16px;
-  height: 36px;
-}
-
-.header-button {
-  border: none;
-  font-size: 16px;
   background-color: gold;
-  color: gray;
-  font-weight: bold;
-  padding: 0px 18px;
-  height: 36px;
-  border-radius: 8px;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-.header-button:hover {
-  background-color: grey;
-  color: white;
 }
